--- a/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_A.Rmd
+++ b/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_A.Rmd
@@ -84,14 +84,14 @@ Similarly, by summing equation 1b with equation 1d and equation 1c multiplied wi
 $$
 \frac{d[ALK]}{dt} = 0. \qquad\hspace{2cm} (4b)
 $$
-Finally, by summing equation 1d with equation 1f and additionally considering the proposed definition of the lump-sum variable $[H_2O_{tot}]$, we obtain
+Finally, by summing equation 1d with equation 1f and additionally considering the proposed definition of the lump-sum variable $[H_xO]$, we obtain
 $$
-\frac{d[H_2O_{tot}]}{dt} = 0. \qquad\hspace{2cm} (4c)
+\frac{d[H_xO]}{dt} = 0. \qquad\hspace{2cm} (4c)
 $$
 
 ### Key take-home message
 
-These equations show that under the assumption of a local chemical equilibrium, $DIC$ is *added* at a rate of the *slow process* ($R_C$), while $ALK$ and $H_2O_{tot}$ are *conserved* (not changing over time). Notably, $DIC$, $ALK$ and $H_2O_{tot}$ are *not* affected by the fast reversible reactions!
+These equations show that under the assumption of a local chemical equilibrium, $DIC$ is *added* at a rate of the *slow process* ($R_C$), while $ALK$ and $H_xO$ are *conserved* (not changing over time). Notably, $DIC$, $ALK$ and $H_xO$ are *not* affected by the fast reversible reactions!
 
 ## Task 4: From lump-sum species to original species
 
@@ -128,19 +128,19 @@ $$
 \qquad\hspace{2cm} (5c)
 $$
 
-Regarding the concentration of $[OH^-]$, it can be calculated from $[H^+]$ based on the relationship 3c. First, by substituting $[H_2O]$ based on the definition of $H_2O_{tot}$, we obtain
+Regarding the concentration of $[OH^-]$, it can be calculated from $[H^+]$ based on the relationship 3c. First, by substituting $[H_2O]$ based on the definition of $H_xO$, we obtain
 $$
-K_w' = \frac{[OH^-]\cdot [H^+]}{[H_2O_{tot}] - [OH^-]},
+K_w' = \frac{[OH^-]\cdot [H^+]}{[H_xO] - [OH^-]},
 $$
 which upon rearrangement yields the accurate relationship
 $$
-\boxed{~[OH^-] = \frac{K_w'}{K_w' + [H^+]}\cdot [H_2O_{tot}]~} \qquad\hspace{2cm} (5d)
+\boxed{~[OH^-] = \frac{K_w'}{K_w' + [H^+]}\cdot [H_xO]~} \qquad\hspace{2cm} (5d)
 $$
 This relationship can be simplified by considering that for typical pH values of 1--12, the concentrations of $H^+$ are in the range of $10^{-12}$--$10^{-1}~mol~L^{-1}$. Thus, the dissociation constant $K_w' \approx 1.8\times10^{-16}~mol~L^{-1}$ in the denominator can be neglected, yielding 
 $$
-[OH^-] \approx \frac{K_w'}{[H^+]}\cdot [H_2O_{tot}].
+[OH^-] \approx \frac{K_w'}{[H^+]}\cdot [H_xO].
 $$
-Using the same argument, the ratio $K_w'/[H^+]$ is in the range of $10^{-15}$--$10^{-4}$, which makes the concentration of $[OH^-]$ negligible in comparison to the concentration of $H_2O$ (i.e., $[H_2O_{tot}]\approx [H_2O]$). Thus, using the last equation, the expression for $[OH^-]$ can be well approximated by\footnote{This result is equivalent to the commonly used expression governing the water self-ionization equilibrium $K_w = [OH^-]\cdot [H^+]$.}
+Using the same argument, the ratio $K_w'/[H^+]$ is in the range of $10^{-15}$--$10^{-4}$, which makes the concentration of $[OH^-]$ negligible in comparison to the concentration of $H_2O$ (i.e., $[H_xO]\approx [H_2O]$). Thus, using the last equation, the expression for $[OH^-]$ can be well approximated by\footnote{This result is equivalent to the commonly used expression governing the water self-ionization equilibrium $K_w = [OH^-]\cdot [H^+]$.}
 $$
 \boxed{~[OH^-] \approx \frac{K_w}{[H^+]}~} \qquad\hspace{2cm} (5d')
 $$
@@ -164,7 +164,7 @@ Because $[HCO_3^-]$ and $[CO_3^{2-}]$ depend on $[DIC]$ and $[H^+]$ (see $5a$ an
 
 Note that equation $5e$ is highly non-linear; thus these calculations need to be done *numerically*. This contrasts to Part I of this reader, where it was possible to also find an analytical solution. Although this is no longer possible when the number of fast acid-base reactions (e.g., Reactions 1--3) increases, we can proceed thanks to numerical solvers (see next section).
 
-Another important point to note here is the statement 3: $[H^+]$ *can be calculated* if the values of $[DIC]$ and $[ALK]$ are known. This statement is the basis for the *general* approach in pH modeling: one needs to first *identify the appropriate lump-sum species* (e.g., $DIC$ and $ALK$) and then formulate the *effect of each slow process* on these lump-sum species (e.g., addition or removal of $DIC$ [e.g., 4a] and $ALK$ [e.g., 4b]).\footnote{Strictly speaking, one should also identify the effects of the slow processes on the lump-sum species $H_2O_{tot} = H_2O + OH^-$. However, due to the vastly larger concentration of $H_2O$ in an aquatic setting compared to all other species involved, the effects of processes such as mineral dissolution/precipitation, redox or acid-base reactions, etc., are typically negligible and the water concentration can be considered as constant.} Then, by solving the differential equations for the lump-sum species numerically, one can quantify the corresponding evolution of pH based on the statement 3, i.e., by numerically solving for $[H^+]$ from Eq. 5e. This will be illustrated in the following section. 
+Another important point to note here is the statement 3: $[H^+]$ *can be calculated* if the values of $[DIC]$ and $[ALK]$ are known. This statement is the basis for the *general* approach in pH modeling: one needs to first *identify the appropriate lump-sum species* (e.g., $DIC$ and $ALK$) and then formulate the *effect of each slow process* on these lump-sum species (e.g., addition or removal of $DIC$ [e.g., 4a] and $ALK$ [e.g., 4b]).\footnote{Strictly speaking, one should also identify the effects of the slow processes on the lump-sum species $H_xO = H_2O + OH^-$. However, due to the vastly larger concentration of $H_2O$ in an aquatic setting compared to all other species involved, the effects of processes such as mineral dissolution/precipitation, redox or acid-base reactions, etc., are typically negligible and the water concentration can be considered as constant.} Then, by solving the differential equations for the lump-sum species numerically, one can quantify the corresponding evolution of pH based on the statement 3, i.e., by numerically solving for $[H^+]$ from Eq. 5e. This will be illustrated in the following section. 
 
 ## Task 5: Application to atmospheric CO$_2$ exchange 
 
