--- a/inst/exercises/chemistry/equilibriumOMD/equilibriumOMD_Q.Rmd
+++ b/inst/exercises/chemistry/equilibriumOMD/equilibriumOMD_Q.Rmd
@@ -112,9 +112,19 @@ knitr::kable(cbind(c("$pH$", "$[OM]$", "$[DIC]$", "$[NH_x]$", "$[H_xO]$"),
                    c("--", rep("$\\mu mol~L^{-1}$",3), "$mol~L^{-1}$")))
 ```
 
-## Task 6: Application to ammonia degassing
+## Task 6: Does the formulation of slow reversible processes matter?
 
-The model developed in Task 6 should be equivalent to the ammonia degassing model developed in part I of this Reader in the limit of $DIC\rightarrow 0$ and $H_xO \rightarrow 0$.
+In the literature, processes such as OM mineralization are often formulated in different ways, depending on the preference or perspective. For example, the stoichiometry of OM mineralization can be represented by the following reaction
+$$
+\quad CH_2O(NH_3)_{NC} + O_2 \rightarrow HCO_3^- + H^- + {NC} \cdot NH_3.
+$$
+instead of the one above.
+
+* Show that this alternative formulation does *not* affect the mass balance equations for the lump-sum variables $DIC$, $ALK$, $NH_x$, and $H_xO$.
+
+## Task 7: Application to ammonia degassing
+
+The model developed in Task 5 should be equivalent to the ammonia degassing model developed in part I of this Reader in the limit of $DIC\rightarrow 0$ and $H_xO \rightarrow 0$.
 
 * Check that this is true by comparing the results of the two models.
 
