text in the crop and weed model made clearer (the part about percolation)

--- a/inst/exercises/biogeochemistry/crops_weed/crops_weed_A.Rmd
+++ b/inst/exercises/biogeochemistry/crops_weed/crops_weed_A.Rmd
@@ -112,6 +112,6 @@ legend("bottomleft", c("continuous+weed",  "one-time", "continuous, no weed"),
 
 We see that during the initial 42 days, crops and weeds grow practically at the same rate. This is because P in the soil is *not* limiting their growth. Rather, their growth is limited by space, as the space limitation factor $(1-TotBiom/ktot)$ gradually decreases from 1 to about 0.2. 
 
-The situation changes rather abruptly after about 42 days. In the 2nd scenario, the crop becomes limited by P due to removal by percolation, whereas the continuous fertilization ensures that this does not happen in the 1st scenario. As a result, the crop continues to grow, reaching about 25% higher stock per $m^2$ after 90 days in the first compared to the second scenario. This is, however, *not* the case for the *weed*, which continues to grow rapidly even after 42 days in the 2nd scenario. This is, clearly, due to the fact that its roots reach deeper into the soil and thus have more access to P. Although the continuous growth of weeds has a negative impact on the growth of crops due to space limitation, it is only marginal. Without weeds, the crop weight after 90 days would be $743~g/plant$ without weeds in comparison to $680~g/plant$ with weeds (i.e., about 10% higher yield), as indicated by the results of the scenario 3 (green line).
+The situation changes rather abruptly after about 42 days. In the 2nd scenario, the crop becomes limited by P due to the removal by percolation, whereas the continuous fertilization ensures that this does not happen in the 1st scenario. As a result, the crop continues to grow, reaching about 25% higher stock per $m^2$ after 90 days in the first compared to the second scenario. This is, however, *not* the case for the *weed*, which continues to grow rapidly even after 42 days in the 2nd scenario. This is, clearly, due to the fact that its roots reach deeper into the soil and thus have more access to P. Although the continuous growth of weeds has a negative impact on the growth of crops due to space limitation, it is only marginal. Without weeds, the crop weight after 90 days would be $743~g/plant$ without weeds in comparison to $680~g/plant$ with weeds (i.e., about 10% higher yield), as indicated by the results of the scenario 3 (green line).
 
 Another notable result of this simulation is that *most* of the fertilizer is *lost* in this agriculture. Only about 0.27 out of 1.1 $mol~P~m^{-2}$ (about 25% yield on fertilizer) is converted into profitable biomass (crop) in the continuous fertilization scenario. This fraction decreases to about 0.22 out of 1.1 $mol~P~m^{-2}$ (20% yield) in the one-time fertilization scenario. These results illustrate the potential evironmental impact of this agriculture.
