--- a/inst/exercises/biogeochemistry/crops_weed/crops_weed_Q.Rmd
+++ b/inst/exercises/biogeochemistry/crops_weed/crops_weed_Q.Rmd
@@ -22,7 +22,7 @@ He needs to decide whether to fertilize his land with phosphate once, before pla
 
 The problem he has is that the field of lettuce is invaded by a weed that (i) grows slightly slower than the lettuce, and (ii) has a much deeper root system and a higher affinity for phosphorus than the lettuce. While the roots of lettuce penetrate 7 cm deep into the soil, the weed's roots penetrate down to a depth of 14 cm.
 
-Once the fertilizer is added to the soil, it percolates, due to the rain, from the upper 7 cm to the deeper soil layer, at a rate of 0.5% per day. 
+Once the fertilizer is added to the soil, it percolates, due to the rain, from the upper 7 cm to the deeper soil layer, as well as from the deeper soil layer (7--14 cm) to the soil below 14 cm, at a rate of 5% per day.
 
 The farmer also wants to optimize the time of harvesting, so as to have a maximal profit. You will make a bio-economic model to help reach this decision.
 
@@ -43,13 +43,13 @@ The continuous P addition is implemented as a parameter (*Paddition*) while the 
 
 First, create suitable rate expressions for the flows of P in the system. 
 
-* Assume that, in addition to a competition for phosphorus, there is also a competition for space, i.e., the weed plants may limit the growth of the crop (and vice versa) because they block the sunlight. You may model this using the concept of *ecosystem carrying capacity*, assuming that the maximum *total* plant concentration (summed biomass of the weeds and crops, expressed in $mol~P~m^{-2}$) that can be sustained (ktot) is 0.3 $mol~P~m^{-2}$.
+* Assume that, in addition to a competition for phosphorus, there is also a competition for space, i.e., the weed plants may limit the growth of the crop (and vice versa) because they block the sunlight. You may model this using the concept of *ecosystem carrying capacity*, assuming that the maximum *total* plant concentration (summed biomass of the weeds and crops, expressed in $mol~P~m^{-2}$) that can be sustained ($ktot$) is equal to 0.3 $mol~P~m^{-2}$.
 
-* The following table provides the parameters that you need to use. (tip: based on the units of the parameters, you should be able to deduce the corresponding rate expressions). 
+* The following table provides the parameters that you can use. (Tip: based on the units of the parameters, you should be able to deduce the corresponding rate expressions.) 
 
 | Name         | Value  | Description                    | Unit                  |
 | ------------ | ------ | ------------------------------ | --------------------- |
-|  Paddition   | 0.9/90 | Rate of P supply to P1         | $mol~P~m^{-2} d^{-1}$ |
+|  Paddition   | 0.9/90 | Rate of P supply to P1         | $mol~P~m^{-2}~d^{-1}$ |
 |  percolation | 0.05   | Dilution by rain               | $d^{-1}$              |          
 |  ksCrop      | 2e-3   | Monod ct for P uptake by crop  | $mol~P~m^{-2}$        |
 |  ksWeed      | 0.5e-3 | Monod ct for P uptake by weed  | $mol~P~m^{-2}$        |
@@ -60,6 +60,8 @@ First, create suitable rate expressions for the flows of P in the system.
 |  rMweed      | 0.0    | Loss rate (mortality)          | $d^{-1}$              |                
 |  N           | 25     | Density of crop plants         | $ind~m^{-2}$          |                
 |  P2WW        | 62000  | Convert P to wet weight        | $g~ww~(mol~P)^{-1}$   |                
+
+### Continuous fertilization
 
 Implement the model with continuous fertilization in R, using the above parameter values. You can start with the R-markdown template model file *RTM_0D.Rmd* to implement this model.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTM\_0D. Save this file under a different name. Do not forget to change the heading of this file.}
 
@@ -74,11 +76,15 @@ Implement the model with continuous fertilization in R, using the above paramete
 
 * Run the model for 90 days. 
 
+### One-time fertilization
+
 An alternative culturing method is to fertilise the upper layer of the soil *before* planting the crops, so that P does not need to be administered continuously. Here, assume that the amount of P *initially added* to the top soil is the *same* as the accumulated amount of P added to the system during the *continuous fertilization* over 90 days in the previous scenario.
 
-* Implement the model with one-time fertilization in R, using the above parameter values (except for the fertilization rate, which you should set to 0).
+* Implement the model with one-time fertilization in R, using the above parameter values (except for the fertilization rate, which you should now set to 0).
 
 * Run the model for 90 days.
+
+### Model comparison
 
 Compare results from both scenarios and discuss the following aspects: 
 
@@ -90,7 +96,7 @@ Compare results from both scenarios and discuss the following aspects:
 
 # The economic part
 
-Now we take into account the cost of this culture and the profit that the farmer can make (if any).
+Now we take into account the cost of this agriculture and the profit that the farmer can make (if any).
 
 ## Assumtions
 
@@ -112,7 +118,7 @@ The eventual profits are determined as follows:
 
 ## Tasks
 
-* Implement the cost as an extra state variable. Think how this increases in time. Tip: you will need to put some costs in the differential equations, other costs should be added to the initial conditions.
+* Implement the cost as an extra state variable. Think how this increases over time. Tip: you will need to put some costs in the differential equations, other costs should be added to the initial conditions.
 
 * Estimate the income the farmer could have from selling the lettuce (this will be 0 as long as the plants weigh less than 300 g). Subtract the cost from this potential income to estimate the profit the farmer would make if he would sell the crops at that time.
 
@@ -122,6 +128,6 @@ Assuming that your model parameters are realistic, discuss the following aspects
   
 * When should the crops best be sold, and how much profit will be made?
 
-* Regarding the waste of fertilizer, what would be the environmenal impact of the agriculture approach employed by the farmer? What would you recommend if the farmer *wanted* to make his agriculture more environmentally friendly? (Base this recommendation on the fertilizer waste.) How would this affect the profits the farmer can make? (This partially explains the title of this exercise.)
+* Regarding the waste of fertilizer, what would be the environmental impact of the agriculture approach employed by the farmer? What would you recommend if the farmer *wanted* to make his agriculture more environmentally friendly? (Base your recommendation on the fertilizer waste.) How would this consideration of the environmental impact affect the profits the farmer can make? (The discussion around this point partially explains the title of this exercise.)
 
 * How would you *stimulate* the farmer --- by modifying economic parameters (so cost) --- to become more environmentally friendly?
